"""
Python client for the Go Discovery Engine gRPC service.
This integrates the Go discovery engine with the Python MCP server.
"""

import json
import os
import time
from dataclasses import dataclass, field
from typing import Dict, List, Optional, Any
from concurrent import futures

import grpc
from google.protobuf import json_format, struct_pb2
import logging

logger = logging.getLogger(__name__)


@dataclass
class Schema:
    """Schema information from discovery engine"""
    id: str
    name: str
    event_type: str
    attributes: List[Dict[str, Any]]
    sample_count: int
    data_volume: Optional[Dict[str, Any]] = None
    quality: Optional[Dict[str, Any]] = None
    patterns: List[Dict[str, Any]] = field(default_factory=list)
    discovered_at: Optional[int] = None
    last_analyzed_at: Optional[int] = None
    metadata: Dict[str, Any] = field(default_factory=dict)


@dataclass
class QualityReport:
    """Quality assessment report"""
    event_type: str
    overall_score: float
    dimensions: Dict[str, Any]
    issues: List[Dict[str, Any]]
    assessed_at: int
    metadata: Dict[str, Any] = field(default_factory=dict)


@dataclass
class Relationship:
    """Relationship between schemas"""
    id: str
    type: str
    source_schema: str
    target_schema: str
    join_conditions: List[Dict[str, str]]
    strength: float
    confidence: float
    sample_matches: int


class DiscoveryClient:
    """Client for interacting with the Go Discovery Engine via gRPC"""
    
    def __init__(self, host: str = "localhost", port: int = 8081, timeout: int = 30):
        """
        Initialize the discovery client.
        
        Args:
            host: gRPC server host
            port: gRPC server port
            timeout: Default timeout in seconds
        """
        self.host = host
        self.port = port
        self.timeout = timeout
        self.channel = None
        self.stub = None
        self._connect()
    
    def _connect(self):
        """Establish connection to the gRPC server"""
        try:
            # Create channel with options
            options = [
                ('grpc.max_receive_message_length', 10 * 1024 * 1024),  # 10MB
                ('grpc.max_send_message_length', 10 * 1024 * 1024),
            ]
            
            self.channel = grpc.insecure_channel(
                f"{self.host}:{self.port}",
                options=options
            )
            
            # Wait for channel to be ready
            grpc.channel_ready_future(self.channel).result(timeout=5)
            
            # In a real implementation, we would import the generated stub
            # For now, we'll use a simplified approach
            logger.info(f"Connected to Discovery Engine at {self.host}:{self.port}")
            
        except Exception as e:
            logger.error(f"Failed to connect to Discovery Engine: {e}")
            raise
    
    def discover_schemas(
        self,
        account_id: str,
        pattern: str = "",
        max_schemas: int = 100,
        event_types: Optional[List[str]] = None,
        tags: Optional[Dict[str, str]] = None
    ) -> List[Schema]:
        """
        Discover available schemas.
        
        Args:
            account_id: New Relic account ID
            pattern: Optional pattern to filter schemas
            max_schemas: Maximum number of schemas to return
            event_types: Optional list of event types to filter
            tags: Optional tags to filter
            
        Returns:
            List of discovered schemas
        """
        try:
            # In a real implementation, we would call the gRPC method
            # For now, return mock data
            logger.info(f"Discovering schemas for account {account_id}")
            
            # Simulate gRPC call
            return [
                Schema(
                    id="schema-1",
                    name="Transaction",
                    event_type="Transaction",
                    attributes=[
                        {"name": "duration", "data_type": "float", "semantic_type": "duration"},
                        {"name": "name", "data_type": "string", "semantic_type": "identifier"},
                        {"name": "error", "data_type": "boolean", "semantic_type": "status"},
                    ],
                    sample_count=1000000,
                    data_volume={
                        "total_events": 1000000,
                        "events_per_minute": 1000,
                        "data_size_bytes": 100000000,
                    },
                    quality={
                        "overall_score": 0.85,
                        "dimensions": {
                            "completeness": {"score": 0.9},
                            "consistency": {"score": 0.8},
                            "timeliness": {"score": 0.95},
                            "uniqueness": {"score": 0.85},
                            "validity": {"score": 0.75},
                        }
                    },
                    discovered_at=int(time.time()),
                )
            ]
            
        except Exception as e:
            logger.error(f"Failed to discover schemas: {e}")
            raise
    
    def profile_schema(
        self,
        event_type: str,
        profile_depth: str = "standard",
        include_patterns: bool = True,
        include_quality: bool = True,
        sample_size: int = 1000
    ) -> Schema:
        """
        Profile a specific schema with detailed analysis.
        
        Args:
            event_type: Event type to profile
            profile_depth: Depth of profiling (basic, standard, deep)
            include_patterns: Whether to detect patterns
            include_quality: Whether to assess quality
            sample_size: Number of samples to analyze
            
        Returns:
            Detailed schema profile
        """
        try:
            logger.info(f"Profiling schema {event_type} with depth {profile_depth}")
            
            # Simulate gRPC call
            return Schema(
                id=f"schema-{event_type}",
                name=event_type,
                event_type=event_type,
                attributes=[
                    {"name": "id", "data_type": "string", "semantic_type": "identifier"},
                    {"name": "timestamp", "data_type": "timestamp", "semantic_type": "timestamp"},
                    {"name": "value", "data_type": "float", "semantic_type": "metric"},
                ],
                sample_count=sample_size,
                patterns=[
                    {
                        "type": "time_series",
                        "subtype": "seasonal",
                        "confidence": 0.85,
                        "description": "Daily seasonality detected",
                        "parameters": {"period": 86400, "amplitude": 0.3}
                    }
                ] if include_patterns else [],
                quality={
                    "overall_score": 0.82,
                    "dimensions": {
                        "completeness": {"score": 0.88, "issues": ["Some null values in 'value' field"]},
                        "consistency": {"score": 0.79, "issues": ["Inconsistent timestamp formats"]},
                        "timeliness": {"score": 0.91},
                        "uniqueness": {"score": 0.85},
                        "validity": {"score": 0.67, "issues": ["Out of range values detected"]},
                    },
                    "issues": [
                        {
                            "severity": "medium",
                            "type": "missing_data",
                            "description": "12% of records have null values",
                            "affected_attributes": ["value"],
                            "occurrence_count": 120
                        }
                    ]
                } if include_quality else None,
                discovered_at=int(time.time()),
            )
            
        except Exception as e:
            logger.error(f"Failed to profile schema: {e}")
            raise
    
    def intelligent_discovery(
        self,
        focus_areas: List[str],
        event_types: Optional[List[str]] = None,
        anomaly_detection: bool = True,
        pattern_mining: bool = True,
        quality_assessment: bool = True,
        confidence_threshold: float = 0.7,
        context: Optional[Dict[str, str]] = None
    ) -> Dict[str, Any]:
        """
        Perform AI-guided schema discovery.
        
        Args:
            focus_areas: Areas to focus on (e.g., ["errors", "performance"])
            event_types: Optional event types to analyze
            anomaly_detection: Enable anomaly detection
            pattern_mining: Enable pattern mining
            quality_assessment: Enable quality assessment
            confidence_threshold: Minimum confidence for insights
            context: Additional context for discovery
            
        Returns:
            Discovery results with schemas, insights, and recommendations
        """
        try:
            logger.info(f"Starting intelligent discovery for areas: {focus_areas}")
            
            # Simulate gRPC call
            schemas = self.discover_schemas(
                account_id=context.get("account_id", "default") if context else "default",
                event_types=event_types
            )
            
            insights = []
            if anomaly_detection:
                insights.append({
                    "type": "anomaly",
                    "severity": "high",
                    "title": "Unusual spike in error rates",
                    "description": "Error rate increased by 300% in the last hour",
                    "affected_schemas": ["Transaction"],
                    "confidence": 0.92,
                    "evidence": {"error_rate": 0.15, "baseline": 0.05}
                })
            
            if pattern_mining:
                insights.append({
                    "type": "pattern",
                    "severity": "medium",
                    "title": "Periodic performance degradation",
                    "description": "Response time increases every day at 2 PM",
                    "affected_schemas": ["Transaction"],
                    "confidence": 0.85,
                    "evidence": {"pattern": "daily_spike", "time": "14:00"}
                })
            
            recommendations = [
                "Consider adding indexes on frequently queried attributes",
                "Implement data retention policies for old events",
                "Add validation rules for critical fields",
            ]
            
            return {
                "schemas": schemas,
                "insights": insights,
                "recommendations": recommendations,
                "discovery_duration": 1500  # milliseconds
            }
            
        except Exception as e:
            logger.error(f"Failed in intelligent discovery: {e}")
            raise
    
    def find_relationships(
        self,
        schema_names: List[str],
        relationship_types: Optional[List[str]] = None,
        min_confidence: float = 0.7,
        max_relationships: int = 50
    ) -> List[Relationship]:
        """
        Find relationships between schemas.
        
        Args:
            schema_names: Schema names to analyze
            relationship_types: Types of relationships to find
            min_confidence: Minimum confidence threshold
            max_relationships: Maximum relationships to return
            
        Returns:
            List of discovered relationships
        """
        try:
            logger.info(f"Finding relationships between schemas: {schema_names}")
            
            # Simulate gRPC call
            relationships = []
            
            if len(schema_names) >= 2:
                relationships.append(
                    Relationship(
                        id="rel-1",
                        type="join",
                        source_schema=schema_names[0],
                        target_schema=schema_names[1],
                        join_conditions=[
                            {
                                "source_attribute": "transaction_id",
                                "target_attribute": "transaction_id",
                                "operator": "="
                            }
                        ],
                        strength=0.95,
                        confidence=0.88,
                        sample_matches=5000
                    )
                )
            
            return relationships
            
        except Exception as e:
            logger.error(f"Failed to find relationships: {e}")
            raise
    
    def assess_quality(
        self,
        event_type: str,
        sample_size: int = 1000,
        quality_dimensions: Optional[List[str]] = None
    ) -> QualityReport:
        """
        Assess data quality for a schema.
        
        Args:
            event_type: Event type to assess
            sample_size: Number of samples to analyze
            quality_dimensions: Specific dimensions to assess
            
        Returns:
            Quality assessment report
        """
        try:
            logger.info(f"Assessing quality for {event_type}")
            
            # Simulate gRPC call
            return QualityReport(
                event_type=event_type,
                overall_score=0.78,
                dimensions={
                    "completeness": {
                        "score": 0.85,
                        "issues": ["Missing values in optional fields"]
                    },
                    "consistency": {
                        "score": 0.72,
                        "issues": ["Date format variations detected"]
                    },
                    "timeliness": {
                        "score": 0.90,
                        "issues": []
                    },
                    "uniqueness": {
                        "score": 0.80,
                        "issues": ["Duplicate records found"]
                    },
                    "validity": {
                        "score": 0.65,
                        "issues": ["Invalid values in numeric fields"]
                    }
                },
                issues=[
                    {
                        "severity": "high",
                        "type": "invalid_data",
                        "description": "35% of records have invalid timestamps",
                        "affected_attributes": ["timestamp"],
                        "occurrence_count": 350
                    },
                    {
                        "severity": "medium",
                        "type": "duplicates",
                        "description": "8% duplicate records detected",
                        "affected_attributes": ["id"],
                        "occurrence_count": 80
                    }
                ],
                assessed_at=int(time.time())
            )
            
        except Exception as e:
            logger.error(f"Failed to assess quality: {e}")
            raise
    
    def get_health(self) -> Dict[str, Any]:
        """
        Get health status of the discovery engine.
        
        Returns:
            Health status information
        """
        try:
            # Simulate gRPC call
            return {
                "is_healthy": True,
                "status": "All systems operational",
                "checks": [
                    {
                        "name": "engine",
                        "is_healthy": True,
                        "message": "Engine running normally"
                    },
                    {
                        "name": "cache",
                        "is_healthy": True,
                        "message": "Cache hit rate: 0.75"
                    },
                    {
                        "name": "nrdb_connection",
                        "is_healthy": True,
                        "message": "NRDB connection healthy"
                    }
                ],
                "metrics": {
                    "queries_processed": 10000,
                    "errors_count": 5,
                    "cache_hit_rate": 0.75,
                    "uptime": 86400,  # seconds
                    "average_query_time_ms": 150
                }
            }
            
        except Exception as e:
            logger.error(f"Failed to get health status: {e}")
            raise
    
    def close(self):
        """Close the gRPC channel"""
        if self.channel:
            self.channel.close()
            logger.info("Closed connection to Discovery Engine")


class DiscoveryIntegration:
    """Integration layer between Python MCP server and Go Discovery Engine"""
    
    def __init__(self):
        """Initialize the integration"""
        self.client = None
        self._ensure_client()
    
    def _ensure_client(self):
        """Ensure discovery client is connected"""
        if not self.client:
            # Get configuration from environment
            host = os.getenv("DISCOVERY_ENGINE_HOST", "localhost")
            port = int(os.getenv("DISCOVERY_ENGINE_PORT", "8081"))
            
            self.client = DiscoveryClient(host=host, port=port)
    
    def discover_schemas_for_mcp(self, account_id: str, **kwargs) -> List[Dict[str, Any]]:
        """
        Discover schemas and format for MCP response.
        
        Args:
            account_id: New Relic account ID
            **kwargs: Additional discovery parameters
            
        Returns:
            List of schemas formatted for MCP
        """
        schemas = self.client.discover_schemas(account_id, **kwargs)
        
        # Convert to MCP-friendly format
        return [
            {
                "name": schema.name,
                "event_type": schema.event_type,
                "attributes": schema.attributes,
                "sample_count": schema.sample_count,
                "quality_score": schema.quality.get("overall_score", 0) if schema.quality else 0,
                "discovered_at": schema.discovered_at,
            }
            for schema in schemas
        ]
    
    def analyze_schema_for_mcp(self, event_type: str) -> Dict[str, Any]:
        """
        Analyze a schema and return insights for MCP.
        
        Args:
            event_type: Event type to analyze
            
        Returns:
            Analysis results formatted for MCP
        """
        # Profile the schema
        schema = self.client.profile_schema(event_type, profile_depth="deep")
        
        # Assess quality
        quality = self.client.assess_quality(event_type)
        
        return {
            "schema": {
                "name": schema.name,
                "attributes": schema.attributes,
                "patterns": schema.patterns,
            },
            "quality": {
                "score": quality.overall_score,
                "issues": quality.issues,
                "dimensions": quality.dimensions,
            },
            "recommendations": self._generate_recommendations(schema, quality),
        }
    
    def _generate_recommendations(self, schema: Schema, quality: QualityReport) -> List[str]:
        """Generate recommendations based on schema and quality analysis"""
        recommendations = []
        
        if quality.overall_score < 0.7:
            recommendations.append("Consider implementing data quality validation rules")
        
        if any(issue["severity"] == "high" for issue in quality.issues):
            recommendations.append("Address high-severity data quality issues")
        
        if schema.patterns:
            recommendations.append("Leverage detected patterns for anomaly detection")
        
        return recommendations


# Create a singleton instance for use in the MCP server
discovery_integration = DiscoveryIntegration()